k8s/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: auth                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: auth               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: auth-service:2       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: auth           # ім'я контейнеру
          ports:
            - containerPort: 3000  # порт по якому можна звертатись до поди
