k8s/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 3000 # порт контейнера
  selector:
    app: auth      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
